# Dash_covid_19

dash-Covid/: pyproject.toml
dash-Covid/dash_covid/: asd.py  dashboard.ipynb
